Pedro QA Fix: Too tall img grid

--- a/ui.frontend/src/main/webpack/components/image-collage/image-collage.scss
+++ b/ui.frontend/src/main/webpack/components/image-collage/image-collage.scss
@@ -6,21 +6,29 @@
             "image1 image3";
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 1fr 1fr;
-        // @include media('>=576px', '<=992px') {
-        //     grid-auto-rows: 185px 185px;
-        // }
+        @media screen and (max-width: 767px) {
+            grid-auto-rows: 185px 185px;
+        }
         .image:nth-child(1) {
             grid-area: image1;
         }
+        .image:nth-child(2) {
+            grid-area: image2;
+        }        
+        .image:nth-child(3) {
+            grid-area: image3;
+        }          
         .image {
             height: 100%;
             .cmp-image {
-                height: inherit;
+                position: relative;
                 img {
-                    height: 100%;
-                    width: 100%;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
                     object-fit: cover;
-                    display: block;
                 }
             }
         }
@@ -74,11 +82,9 @@
 
     &.primaryBottom-multi-corner-radius {
         .cmp-container {
-
             grid-template-areas: 
             "image2 image3"            
             "image1 image1";
-
             .image:nth-child(2) {
                 img {
                     @include border-top-right-radius();
@@ -98,9 +104,6 @@
         grid-template-areas:
         "image2 image1"
         "image3 image1";
-        .image:nth-child(1) {
-            grid-area: image1;
-        }
     }
 
     &.cmp-image-collage--border-top-left {
